--- a/app/static/css/modal.css
+++ b/app/static/css/modal.css
@@ -22,6 +22,7 @@
 }
 
 .p-modal-content {
+    font-size: 1.0em;
     background: var(--bg);
     border-radius: .75rem;
     box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.25);
@@ -32,6 +33,20 @@
     position: relative;
     animation: slideUp .25s ease-out;
     text-align: left;
+}
+
+.p-modal input[type="text"] {
+    border-width: thin;
+    border-color: var(--text-muted);
+}
+
+.p-modal input[type="number"] {
+    border-width: thin;
+    border-color: var(--text-muted);
+}
+
+.p-modal select {
+    border: 1px solid var(--text-muted);
 }
 
 .p-close {
