--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -283,6 +283,11 @@ input {
     padding: 0 0.6em;
 }
 
+.p-modal-add-category {
+    display: flex;
+    padding: 0 0em;
+}
+
 .p-button-info {
     flex: 1;
     background: var(--primary);
@@ -349,7 +354,7 @@ input {
     gap: 0.6em;
 }
 
-.p-category-limit-name {
+.p-modal-limit-name {
     font-weight: 600;
     display: inline-block;
     padding: 0.1em 0.8em;
@@ -725,12 +730,12 @@ input {
     border-top: 1px solid var(--border-muted);
 }
 
-.p-category-progress-gap {
+.p-modal-gap {
     margin-top: 0.8em;
     padding-top: 0.8em;
 }
 
-.p-category-header-divider {
+.p-modal-divider {
     padding-bottom: 0.4em;
     border-color: var(--primary);
     border-width: .1em;
@@ -739,6 +744,13 @@ input {
 
 .p-category-progress-balance-container {
     margin-top: 0.6em;
+    display: flex;
+    flex-direction: row;
+    gap: 0.4em;
+    margin-bottom: 0.4em;
+}
+
+.p-modal-unallocated-container {
     display: flex;
     flex-direction: row;
     gap: 0.4em;
@@ -793,13 +805,13 @@ input {
 
 .p-category-progress-ul {
     list-style: none;
-    margin: 0em 0.4em 0.4em 0.4em;
+    margin: 0em 0em 0.4em 0em;
     background: var(--bg-dark);
     border-radius: 0.4em;
 }
 
 .p-category-progress-li {
-    padding: 0.6rem 1.2em 0.4em 1.2em;
+    padding: 0.6rem 0.4em 0.4em 0.4em;
     margin: 0;
     border-radius: 0.2em;
     border-bottom: 1px solid var(--border);
@@ -956,7 +968,7 @@ input {
         min-height: 44px;
         padding: 12px 16px;
         border-radius: 8px;
-        border: 1px solid #ddd;
+        /* border: 1px solid #ddd; */
     }
 }
 
