--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -423,7 +423,7 @@
             </div>
             
             <ul class="p-category-progress-ul" style="margin-top: 0; padding: 0;">
-              {% for a in budget_allocations.allocations | sort(attribute='category_name') %}
+              {% for ba in budget_allocations.allocations | sort(attribute='category_name') %}
                 <li class="p-category-progress-li" style="
                   display: grid;
                   grid-template-columns: 1.5fr 1fr auto;
@@ -440,7 +440,7 @@
                     text-overflow: ellipsis;
                     white-space: nowrap;
                   ">
-                    {{ a.category_name }}
+                    {{ ba.category_name }}
                   </div>
                   
                   <!-- Amount - Right aligned -->
@@ -449,7 +449,7 @@
                     text-align: center;
                     color: var(--success);
                   ">
-                    {{ a.allocated_amount | commafy(0) }}
+                    {{ ba.allocated_amount | commafy(0) }}
                   </div>
                   
                   <!-- Actions -->
@@ -460,11 +460,11 @@
                     flex-shrink: 0;
                   ">
                     <button class="p-icon-btn-warning" 
-                            onclick="generateModal('editAllocationModal{{ a.id }}','editAllocationClose{{ a.id }}','')">
+                            onclick="generateModal('pEditAllocationModal{{ ba.category_id }}','pEditAllocationClose{{ ba.category_id }}','')">
                       <i class="fa fa-pencil"></i>
                     </button>
                     <form method="POST" 
-                          action="/dashboard/allocations/{{ a.id }}/delete" 
+                          action="/dashboard/allocations/{{ budget_details.id }}/delete/{{ ba.allocation_id }}" 
                           onsubmit="return confirmSubmit(this,'Delete allocation?')"
                           style="margin: 0;">
                       <button class="p-icon-btn-danger" type="submit">
@@ -802,10 +802,10 @@
   </div>
 {% endfor %}
 
-<!-- Edit Budget -->
- {% set budget_id=budget_details.id%}
- <div class="p-modal" id="pBudgetEditModal{{ budget_id }}">
-   <div class="p-modal-content">
+<!-- Edit Budget Modal-->
+{% set budget_id=budget_details.id%}
+<div class="p-modal" id="pBudgetEditModal{{ budget_id }}">
+  <div class="p-modal-content">
     <form class="p-category-form" method="POST" action="/dashboard/budgets/{{ budget_id }}/edit">
       <a href="#" id="pEditBudgetClose{{ budget_id}}" class="p-close"><i class="fa fa-close"></i></a>
       <h2 class="p-modal-limit-name">Edit Budget</h2>
@@ -819,8 +819,32 @@
         </div>
       </div>
     </form>
-   </div>
- </div>
+  </div>
+</div>
+
+
+<!-- Edit Allocation Modal -->
+{% for ba in budget_allocations.allocations %}
+{% set allocation_category_id = ba.category_id %}
+{% set allocation_category_name = ba.category_name %}
+{% set allocation_allocated_amount = ba.allocated_amount %}
+<div class="p-modal" id="pEditAllocationModal{{ allocation_category_id }}">
+  <div class="p-modal-content">
+    <form class="p-category-form" method="POST", action="/dashboard/allocations/{{ budget_details.id }}/edit">
+      <a href="#" id="pEditAllocationClose{{ allocation_category_id }}" class="p-close"><i class="fa fa-close"></i></a>
+      <h2 class="p-modal-limit-name">Edit Allocation</h2>
+      <div class="p-modal-form-content">
+        <input type="hidden" name="category_id" value="{{ allocation_category_id }}" required>
+        <label>Category Name</label>
+        <input type="text" value="{{ allocation_category_name }}" readonly>
+        <label>Allocation Amount</label>
+        <input type="number" name="allocated_amount" value="{{ allocation_allocated_amount }}" required>
+      </div>
+      <button type="submit" class="p-modal-btn" id="pcloseEditAllocationBtn{{ allocation_category_id }}">Save</button>
+    </form>
+  </div>
+</div>
+{% endfor %}
 
 <!-- Alert & Confirm (single) -->
 <div id="pAlert" class="p-alert">
